--- a/css.css
+++ b/css.css
@@ -1,3 +1,9 @@
+html, body{
+    font-family: "Great Vibes", cursive;
+    font-size: 20px;
+    line-height: 1.5;
+
+}
 .column { 
     float: left; 
     width: 25%;
@@ -6,4 +12,94 @@
     content: "";
     display: table;
     clear: both;
+}
+
+.top{
+    top: 0;
+    position: fixed;
+    width: 95%;
+    z-index: 1;/* stack order of an index */
+    padding: 10px 15px;
+
+}
+.bar{
+    color: #000;
+    background-color: #fff;
+    padding: 8px 10px!important;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+    width: 100%;
+    overflow: hidden;
+    letter-spacing: 2px;
+    vertical-align: middle;
+}
+div{ 
+    display: block;
+}
+.bar-item{
+    /*padding: 8px 16px; */
+    padding: 8px;
+    float: left;
+    color: #d54d7b;
+    text-decoration: none;
+
+}
+.button{ 
+    vertical-align: middle;
+    text-align: center;
+    cursor: pointer;
+}
+.top-right{ 
+    float: right!important;
+    
+}
+.name{
+    position: absolute;
+    top: 18%;
+    left: 15%;
+    font-size: 30;
+    border: 2px solid black;
+    padding: 30px 50px;
+    border-radius: 100px;
+}
+.bio{
+    position: absolute;
+    top: 15%;
+    left: 45%;
+    font-size: 18;
+    background-color: pink;
+    padding-right: 120px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+}
+.sections{
+    position: absolute;
+    top: 40%;
+    width: 96%;
+    
+    padding: 15px; 
+}
+.category{
+    padding: 10px;
+    text-decoration: none;
+    color: black;
+  
+}
+.section1{
+    float: left;
+    width: 32%;
+    background-color: #E6E6FA;
+    padding: 5px;
+}
+.section2{
+    float: left;
+    width: 32%;
+    background-color: lightgreen;
+    padding: 5px;
+}
+.section3{
+    float: left;
+    width: 32%;
+    background-color:lightyellow;
+    padding: 5px;
 }
