--- a/signin.css
+++ b/signin.css
@@ -1,6 +1,11 @@
 html,
 body {
+  /* height: 100%; */
   height: 100%;
+  background: linear-gradient(to bottom right, #4169E1 0%, #DA70D6 100%);
+  font-family: 'Ubuntu', sans-serif;
+  text-align: center;
+  align-items: center;
 }
 
 body {
@@ -10,7 +15,19 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+}
+
+.main {
+  background-color: #FFFFFF;
+  /* width: 400px;
+  height: 400px; */
+  /* margin: 7em auto; */
+  border-radius: 1.5em;
+  padding: 1em;
+  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+  align-items: center;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .form-signin {
@@ -19,9 +36,9 @@ body {
   padding: 15px;
   margin: auto;
 }
-.form-signin .checkbox {
+/* .form-signin .checkbox {
   font-weight: 400;
-}
+} */
 .form-signin .form-control {
   position: relative;
   box-sizing: border-box;
@@ -32,15 +49,41 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+/* .form-signin input[type="email"] {
+  /* margin-bottom: -1px; */
+  /* padding: 10px 20px;
+  border: none; */
+  /* border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-left: 46px;
+  text-align: center;
+  margin-bottom: 27px;
 }
 .form-signin input[type="password"] {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+} */
+.form-signin button[type="submit"]{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  border-radius: 5em;
+  color: #fff;
+  background: linear-gradient(to right, #0f8b0a, #19961f);
+  border: 0;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-family: 'Ubuntu', sans-serif;
+  /* margin-left: 35%; */
+  font-size: 13px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  text-align: center;
+  font-size: 16pt;
 }
 .links{ 
   font-size: 12px; 
