--- a/signin.css
+++ b/signin.css
@@ -1,6 +1,5 @@
 html,
 body {
-  /* height: 100%; */
   height: 100%;
   background: linear-gradient(to bottom right, #4169E1 0%, #DA70D6 100%);
   font-family: 'Ubuntu', sans-serif;
@@ -13,7 +12,7 @@ body {
   display: flex;
   -ms-flex-align: center;
   align-items: center;
-  padding-top: 40px;
+  /* padding-top: 40px; */
   padding-bottom: 40px;
   /* background-color: #f5f5f5; */
 }
