--- a/signin.css
+++ b/signin.css
@@ -9,12 +9,13 @@ body {
 
 body {
   display: -ms-flexbox;
-  display: flex;
+  /* display: flex; */
   -ms-flex-align: center;
   align-items: center;
-  /* padding-top: 40px; */
+  padding-top: 40px;
   padding-bottom: 40px;
   /* background-color: #f5f5f5; */
+  height: 150%;
 }
 
 .main {
@@ -31,7 +32,7 @@ body {
 
 .form-signin {
   width: 100%;
-  max-width: 330px;
+  max-width: 400px;
   padding: 15px;
   margin: auto;
 }
