--- a/signin.css
+++ b/signin.css
@@ -11,7 +11,7 @@ body {
   display: -ms-flexbox;
   -ms-flex-align: center;
   align-items: center;
-  padding-top: 40px; */
+  padding-top: 40px;
   padding-bottom: 40px;
   /* background-color: #f5f5f5; */
   height: 150%; 
@@ -28,7 +28,6 @@ body {
   align-items: center;
   font-family: "Ubuntu", sans-serif;
 }
-
 .form-signin {
   width: 100%;
   max-width: 400px;
@@ -42,6 +41,12 @@ body {
   position: relative;
   box-sizing: border-box;
   height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.register .form-control{
+  box-sizing: border-box;
+  height: 7px;
   padding: 10px;
   font-size: 16px;
 }
@@ -84,9 +89,37 @@ body {
   text-align: center;
   font-size: 16pt;
 }
+
+.main p{
+  margin-top: 1px;
+  margin-bottom: 1px;
+  padding: 1px;
+}
+.interests{
+  line-height: 9px;
+}
 .links{ 
   font-size: 12px; 
 }
 .links2{ 
   font-size: 30px;
+}
+.links2 a{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  border-radius: 5em;
+  color: #fff;
+  background: linear-gradient(to right, #0f8b0a, #19961f);
+  border: 0;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-family: 'Ubuntu', sans-serif;
+  /* margin-left: 35%; */
+  font-size: 13px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  text-align: center;
+  font-size: 16pt;
 }
