--- a/signin.css
+++ b/signin.css
@@ -2,7 +2,8 @@ html,
 body {
   height: 100%;
   background: linear-gradient(to bottom right, #4169E1 0%, #DA70D6 100%);
-  font-family: 'Ubuntu', sans-serif;
+  /* font-family: 'Ubuntu', sans-serif; */
+  font-family: "Trebuchet MS";
   text-align: center;
   align-items: center;
 }
@@ -16,19 +17,19 @@ body {
   /* background-color: #f5f5f5; */
   height: 150%; 
 }
-img{
+/* img{
   border-radius: 1.5em;
-}
+} */
 .main {
   background-color: #FFFFFF;
   /* width: 400px;
   height: 400px; */
   /* margin: 7em auto; */
-  border-radius: 1.5em;
+  /* border-radius: 1.5em; */
   padding: 1em;
   box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
   align-items: center;
-  font-family: "Ubuntu", sans-serif;
+  /* font-family: "Ubuntu", sans-serif; */
 }
 .form-signin {
   width: 100%;
@@ -84,7 +85,7 @@ img{
   padding-right: 40px;
   padding-bottom: 10px;
   padding-top: 10px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Trebuchet MS";
   /* margin-left: 35%; */
   font-size: 13px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
@@ -118,7 +119,7 @@ img{
   padding-right: 40px;
   padding-bottom: 10px;
   padding-top: 10px;
-  font-family: 'Ubuntu', sans-serif;
+  /* font-family: "Trebuchet MS"; */
   /* margin-left: 35%; */
   font-size: 13px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
