--- a/css-me.css
+++ b/css-me.css
@@ -2,6 +2,7 @@ html, body{
     height: 100%;
     font-family: "Ubuntu", sans-serif;
     font-size: 20px;
+    margin: 0;
 }
 .column { 
     float: left; 
@@ -20,46 +21,52 @@ html, body{
 
 }
 .bar{
-    margin-top: 5px;
-    color: #fff!important;
-    background: linear-gradient(to bottom right, #1f4ac9 0%, #DA70D6 110%);
+    /* margin-top: 5px; */
+    color: white!important;
+    background-color: black;
+    /* background: linear-gradient(to bottom right, #1f4ac9 0%, #DA70D6 110%); */
     /* background-color: rgb(37, 15, 160)!important; */
     padding: 8px 10px!important;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-    width: 98.5%;
+    width: 99.5%;
     overflow: hidden;
     letter-spacing: 1px;
     vertical-align: middle;
     font-family: Verdana,sans-serif;
     font-size: 14px;
+    margin-right: 10px;
 }
 a.bar-item.button{ 
     color: #ffffff;
+    margin: 1px;
+    margin-right: 10px;
 }
 #block1{ 
     height: 300px; 
-    background-color:white;
+    /* background-color:white; */
+    background: linear-gradient(to bottom right, #1f4ac9 0%, #DA70D6 110%);
     /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);  */
-    border: 1px solid;
-    border-color: #0c2263;
+    /* border: 1px solid;
+    border-color: #0c2263; */
     /* border-radius: 1.5em; */
     padding: 30px;
     text-align: center;
-    margin: 30px;
+    /* margin: 30px;
     margin-left: 14%;
     margin-right: 100px;
     font-family: Georgia;
     max-height: 350px;
-    max-width: 70%;
+    max-width: 70%; */
+    max-width: 100%;
 }
 #block2{ 
     height: auto; 
     background-color: grey; 
     background-color:white;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    margin-top: 5px;
-    margin-bottom: 5px;
-    max-width: relative;
+    /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19); */
+    border: 1px;
+    border-color: black;
+    margin: 10px;
 }
 ul{ 
     display: inline-table;
@@ -107,17 +114,15 @@ a:visited{
 a:hover{ 
     color: black; 
     text-decoration: underline;
+    cursor: pointer;
 }
 a:active{ 
     color: white;
     text-decoration: underline;
     text-decoration-color: white;
 }
-/* div{ 
-    display: block;
-} */
 .bar-item{
-    padding: 8px;
+    padding: 10px;
     float: left;
     color: #000000;
     text-decoration: none;
@@ -131,7 +136,7 @@ a:active{
     border-color: white;
     color: white;
   } */
-
+  
 .top-right{ 
     float: right!important;
     /* align-items: center; */
@@ -152,10 +157,12 @@ a:active{
     /* max-width: 70%; */
     /* width: 900px;  */
     font-size: 18;
-    background-color: royalblue;
+    /* background-color: royalblue; */
     color: white;
     padding: 30px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 1px;
+    border-color: black;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
     /* border-radius: 1.5em; */
     text-align: center;
 }
