--- a/signin.css
+++ b/signin.css
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  background: linear-gradient(to bottom right, #4169E1 0%, #DA70D6 100%);
+  background: linear-gradient(to bottom right, #3333CC 0%, #DA70D6 100%);
   /* font-family: 'Ubuntu', sans-serif; */
   font-family: "Trebuchet MS";
   text-align: center;
