--- a/css-me.css
+++ b/css-me.css
@@ -69,7 +69,9 @@ a.bar-item.button{
 }
 ul{ 
     display: inline-table;
-    margin-top: -15;
+    margin-left: 5%;
+    margin-right: 5%;
+    /* margin-top: -15; */
     border: solid;
     border-color: 6280d9;
     border-radius: 0px;
@@ -77,6 +79,7 @@ ul{
     height: 200px;
     width: 150px;
     overflow: scroll;
+    /* padding-left: 30px; */
 }
 ul[title]::before{ 
     /* content: attr(title); 
@@ -91,6 +94,7 @@ ul[title]::before{
     color: black; 
     margin-left: -30;
     font-variant-caps: all-petite-caps;
+    align-items: center;
 }
 li{
     /* background-color: #white; */
