--- a/css-me.css
+++ b/css-me.css
@@ -67,8 +67,21 @@ a.bar-item.button{
     border-color: black;
     margin: 10px;
 }
+#block2 h2{
+    display: outside;
+}
+#block2 {
+    /* border: 10px solid black; */
+    display: flex;
+    justify-content: space-between;
+  }
+#block2 ul {
+    width: fit-content;
+    height: 200px;
+    background: white;
+  }
 ul{ 
-    display: inline-table;
+    /* display: inline-table; */
     margin-left: 5%;
     margin-right: 5%;
     /* margin-top: -15; */
@@ -77,9 +90,9 @@ ul{
     border-radius: 0px;
     border-width: 1.5px;
     height: 200px;
-    width: 150px;
+    width: 300px;
     overflow: scroll;
-    /* padding-left: 30px; */
+    align-content: center;
 }
 ul[title]::before{ 
     /* content: attr(title); 
@@ -155,6 +168,8 @@ a:active{
     margin-bottom: 5px;
     max-height: 90px;
     overflow-wrap: break-word;
+    color: white;
+    text-shadow: 2px 2px black;
 }
 .bio{
     font-family: "Ubuntu", sans-serif;
@@ -169,7 +184,7 @@ a:active{
     padding: 30px;
     border: 1px;
     border-color: black;
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     /* border-radius: 1.5em; */
     text-align: center;
 }
