--- a/css-me.css
+++ b/css-me.css
@@ -207,7 +207,7 @@ a.dropbtn{
     /* height: 100%; */
     margin: 20px;
 }
-#posts h2{
+.posts h2{
     font-family: Arial, Helvetica, sans-serif;
 }
 /* .post{
@@ -229,6 +229,37 @@ a.dropbtn{
     background: white;
     color: black;
     padding: 2rem;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+/* .post p{
+    margin: 5px;
+} */
+.post h2{
+    font-family: Times, serif;
+    font-size: 45;
+    padding: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+.cat{
+    text-align: left;
+    padding-left: 25px;
+    font-size: 18;
+    text-transform: uppercase;
+}
+.un{
+    text-align: center;
+    font-size: 16;
+}
+.rate{
+    text-align: center;
+    font-size: 12;
+}
+.content{
+    text-align: left;
+    font-size: 20;
 }
 .section1{
     float: left;
