--- a/css-me.css
+++ b/css-me.css
@@ -2,6 +2,7 @@ html, body{
     font-family: "Ubuntu", sans-serif;
     font-size: 20px;
     margin: 0;
+    overflow-x: hidden;
 }
 .column { 
     float: left; 
@@ -175,14 +176,15 @@ a.dropbtn{
     /* max-width: 70%; */
     /* width: 900px;  */
     font-size: 18;
-    /* background-color: royalblue; */
+    background-color: none;
     color: white;
+    margin-top: 25px;;
     padding: 30px;
-    border: 1px;
-    border-color: black;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    /* border-radius: 1.5em; */
+    padding-top: 10px;
     text-align: center;
+    border-top: 1px solid;
+    border-color: white;
+    /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19); */
 }
 .sections{
     position: absolute;
