--- a/css.css
+++ b/css.css
@@ -2,6 +2,7 @@ html, body{
     height: 100%;
     font-family: serif;
     font-size: 20px;
+    overflow-x: hidden;
 }
 .column { 
     float: left; 
