--- a/signin.css
+++ b/signin.css
@@ -6,6 +6,7 @@ body {
   font-family: "Trebuchet MS";
   text-align: center;
   align-items: center;
+  overflow: hidden;
 }
 
 body {
@@ -97,6 +98,8 @@ body {
 }
 .interests{
   line-height: 9px;
+  text-align: left;
+  padding-left: 30%;
 }
 .links{ 
   font-size: 12px; 
