--- a/css-me.css
+++ b/css-me.css
@@ -2,6 +2,7 @@ html, body{
     font-family: "Ubuntu", sans-serif;
     font-size: 20px;
     margin: 0;
+    overflow-x: hidden;
 }
 .column { 
     float: left; 
